# FastAPI_pbg

./: README.md  main.py  pyproject.toml  test_1.py  test_product.py
