[tool.poetry]
name = "fastapi_pythonbiella"
version = "0.1.0"
description = ""
authors = ["Giulia Ciardi <giuliaciardi@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
